C2: PrintIdeal is no longer dumped to tty when xtty is set

XMLWordPrintable

    • b26

      JDK-8306922 accidentally changed the dumping code for PrintIdeal in such a way that it is only dumped to the log file (xtty) and no longer to the stdout (tty) if log file dumping is enabled, for example with -XX:+LogCompilation.

      This should be reverted.

            Assignee:
            Christian Hagedorn
            Reporter:
            Christian Hagedorn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: