8320403: C2: PrintIdeal is no longer dumped to tty when xtty is set

Reviewed-by: kvn, thartmann